--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "angular-oauth2": "^4.2.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "datatables.net": "^1.10.19",
+    "datatables.net-bs": "^1.10.19",
+    "datatables.net-select": "^1.2.7",
+    "datatables.net-select-bs": "^1.2.7",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
