--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.1.0",
     "angular-font-awesome": "^3.1.2",
     "angular-oauth2": "^4.2.0",
+    "boostrap": "^2.0.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "datatables.net": "^1.10.19",
@@ -32,6 +33,7 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.2.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
