--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "popper.js": "^1.14.4",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.2",
+    "sass": "^1.13.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
