--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,9 @@
               "src/assets"
             ],
             "styles": [
+              {
+                "input": "src/appTheme.scss"
+              },
               "src/styles.scss",
               "node_modules/font-awesome/css/font-awesome.css"
             ],
