--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "datatables.net-select-bs": "^1.2.7",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
+    "moment": "^2.23.0",
     "popper.js": "^1.14.4",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.2.2",
