--- a/package.json
+++ b/package.json
@@ -11,51 +11,51 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.1.0",
-    "@angular/cdk": "^7.1.0",
-    "@angular/common": "^7.1.0",
-    "@angular/compiler": "^7.1.0",
-    "@angular/core": "^7.1.0",
-    "@angular/forms": "^7.1.0",
-    "@angular/http": "^7.1.0",
-    "@angular/material": "^7.1.0",
-    "@angular/material-moment-adapter": "^7.2.1",
-    "@angular/platform-browser": "^7.1.0",
-    "@angular/platform-browser-dynamic": "^7.1.0",
-    "@angular/router": "^7.1.0",
+    "@angular/animations": "^7.2.4",
+    "@angular/cdk": "^7.3.1",
+    "@angular/common": "^7.2.4",
+    "@angular/compiler": "^7.2.4",
+    "@angular/core": "^7.2.4",
+    "@angular/forms": "^7.2.4",
+    "@angular/http": "^7.2.4",
+    "@angular/material": "^7.3.1",
+    "@angular/material-moment-adapter": "^7.3.1",
+    "@angular/platform-browser": "^7.2.4",
+    "@angular/platform-browser-dynamic": "^7.2.4",
+    "@angular/router": "^7.2.4",
     "angular-oauth2": "^4.2.0",
     "boostrap": "^2.0.0",
-    "bootstrap": "^4.1.3",
-    "core-js": "^2.5.4",
+    "bootstrap": "^4.2.1",
+    "core-js": "^2.6.4",
     "datatables.net-bs": "^1.10.19",
     "datatables.net-select": "^1.2.7",
     "datatables.net-select-bs": "^1.2.7",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
-    "moment": "^2.23.0",
-    "popper.js": "^1.14.4",
-    "rxjs": "^6.3.3",
-    "rxjs-compat": "^6.2.2",
-    "sass": "^1.13.2",
+    "moment": "^2.24.0",
+    "popper.js": "^1.14.7",
+    "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.4.0",
+    "sass": "^1.17.0",
     "tslib": "^1.9.0",
     "xlsx": "^0.14.1",
-    "zone.js": "~0.8.26"
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
-    "@angular/cli": "~7.1.0",
-    "@angular/compiler-cli": "^7.1.0",
-    "@angular/language-service": "^7.1.0",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/jquery": "^3.3.5",
+    "@angular-devkit/build-angular": "^0.11.4",
+    "@angular/cli": "^7.1.4",
+    "@angular/compiler-cli": "^7.2.4",
+    "@angular/language-service": "^7.2.4",
+    "@types/jasmine": "^2.8.16",
+    "@types/jasminewd2": "^2.0.6",
+    "@types/jquery": "^3.3.29",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.0",
+    "karma-coverage-istanbul-reporter": "^2.0.4",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
