--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rxjs": "^6.4.0",
     "rxjs-compat": "^6.4.0",
     "sass": "^1.17.0",
+    "terser": "^3.17.0",
     "tslib": "^1.9.0",
     "xlsx": "^0.14.1",
     "zone.js": "^0.8.29"
